--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -28,8 +28,6 @@ ext {
     pagingVersion = '2.0.0'
     javaxInjectVersion = '1'
     okhttpLoggingVersion = '3.11.0'
-    junitVersion = '4.12'
-    mockitoVersion = '2.8.47'
     realmFieldNamesHelperVersion = '1.1.1'
     gsonVersion = '2.8.5'
     constraintLayoutVersion = '1.1.2'
@@ -41,11 +39,10 @@ ext {
     junitVersion = '4.12'
     supportTestVersion = '1.0.1'
     daggermockVersion = '0.8.4'
-    mockitoAndroidVersion = '2.23.4'
-    mockitoCoreVersion = '2.21.0'
-    mockitoKotlinVersion = '2.0.0-RC1'
-    robolectricVersion = '3.0'
-    chuckVersion = '1.1.0'
+    mockitoVersion = '2.0.2-beta'
+    mockitoAndroidVersion = '2.26.0'
+    mockitoCoreVersion = '2.26.0'
+    mockitoKotlinVersion = '2.1.0'
 
     amitshekharVersion = '1.0.5'
     loggingInterceptorVersion = '3.9.1'
@@ -113,6 +110,16 @@ ext {
     ]
 
     unitTestDependencies = [
+            junit         : "junit:junit:${junitVersion}",
+//            core          : "org.mockito:mockito-core:2.26.0",
+//            all           : "org.mockito:mockito-all:2.0.2-beta",
+//            android       : "org.mockito:mockito-android:2.26.0",
+//            mockitoKotlin : "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0",
+//            inline        : "org.mockito:mockito-inline:2.26.0",
+            kotlin        : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.11",
+            mockitoAndroid: "org.mockito:mockito-android:2.26.0",
+            mockitoKotlin : "com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0"
+
 
     ]
 
