--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,41 +1,30 @@
-apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-}
-sourceSets {
-    main.java.srcDirs += 'src/main/kotlin'
-}
-sourceCompatibility = "7"
-targetCompatibility = "7"
-buildscript {
-    ext.kotlin_version = '1.3.31'
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-    }
-}
-dependencies {
     implementation domainDependencies.kotlin
     implementation domainDependencies.dagger
     implementation domainDependencies.rxAndroid
     implementation domainDependencies.rxJava
+
+
+    testImplementation unitTestDependencies.junit
+//    testImplementation unitTestDependencies.kotlin
+    testImplementation unitTestDependencies.mockitoKotlin
+//    testImplementation unitTestDependencies.junit
+//    testImplementation unitTestDependencies.all
+//    testImplementation unitTestDependencies.core
+//    testImplementation unitTestDependencies.android
+//    testImplementation unitTestDependencies.mockitoKotlin
+//    testImplementation unitTestDependencies.inline
 }
 
 repositories {
     mavenCentral()
 }
 compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-compileTestKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
     }
